CSS: Improve ShowcaseArticle styling and fix contenteditable outline
The ShowcaseArticle module CSS file has been modified to improve the styling of the article showcase. The issue where it did not look good when there was an <h1> element in the middle of texts has been addressed. Additionally, the outline of the contenteditable element has been set to be transparent.

--- a/src/components/ShowcaseArticle/ShowcaseArticle.module.css
+++ b/src/components/ShowcaseArticle/ShowcaseArticle.module.css
@@ -69,7 +69,6 @@ TODO: !! It is not looking good when there is <h1> in middle of texts
     text-align: left;
 }
 
-
 .Article ol,
 .Article ul {
     text-align: left;
@@ -141,6 +140,10 @@ TODO: !! It is not looking good when there is <h1> in middle of texts
 .Article .button.primary {
     color: var(--palette-3);
     border: 1px solid var(--palette-3);
+}
+
+.Article [contenteditable] {
+    outline: 0px solid transparent;
 }
 
 /*
